syntax="proto3";

package pb;
option go_package = "./pb;pb";

message BiDirectionalStreamRequest {
    string name = 1;
}

message BiDirectionalStreamResponse {
    string message = 1;
}

service BiDirectionalStreamService {
    rpc BiDirectionalStream(stream BiDirectionalStreamRequest) returns (stream BiDirectionalStreamResponse) {}
}
