syntax = "proto3";
package pb;
option go_package = "./pb;pb";

message ServerStreamRequest { string name = 1; }

service ServerStream {
  rpc ServerStream(ServerStreamRequest) returns (stream ServerStreamRequest);
}
